Bug 492588 - Icon of mounted optical disc incorrectly indicates that it's unmounted
Summary: Icon of mounted optical disc incorrectly indicates that it's unmounted
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Disks & Devices widget (other bugs)
Version First Reported In: master
Platform: Neon Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2024-09-03 11:37 UTC by Patrick Silva
Modified: 2024-11-27 11:37 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot (100.09 KB, image/png)
2024-09-03 11:37 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2024-09-03 11:37:06 UTC
Created attachment 173273 [details]
screenshot

STEPS TO REPRODUCE
1. connect a flash drive to usb port
2. mount the device via Dolphin
3. click on Disks & Devices applet and observe the icon of the previously mounted flash drive

OBSERVED RESULT
device icon is overlapped by an orange square, incorrectly indicating that the device is unmounted.
Please see the attached screenshot.

EXPECTED RESULT
the icon should indicate the state of the device correctly

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 6.1.80
KDE Frameworks Version: 6.6.0
Qt Version: 6.7.2
Graphics Platform: Wayland
Comment 1 Akseli Lahtinen 2024-09-04 13:16:12 UTC
Can confirm the issue

Operating System: Fedora Linux 40
KDE Plasma Version: 6.1.80
KDE Frameworks Version: 6.6.0
Qt Version: 6.7.2
Kernel Version: 6.10.6-200.fc40.x86_64 (64-bit)
Graphics Platform: Wayland
Processors: 12 × AMD Ryzen 5 3600 6-Core Processor
Memory: 15.5 GiB of RAM
Graphics Processor: AMD Radeon RX 6600
Comment 2 Nate Graham 2024-09-05 19:58:00 UTC
Yup, me too.
Comment 3 Nate Graham 2024-09-06 08:39:05 UTC
It would appear that in the QML code, `DN.DevicesStateMonitor.Working` is false and `deviceItem.deviceEmblems[0]` is "emblem-unmounted".

Neither of these should be the case. I suspect a regression in the port away from the old DataEngine code.
Comment 4 Bug Janitor Service 2024-09-06 17:00:13 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/4687
Comment 5 Nate Graham 2024-09-08 11:06:13 UTC
Git commit c39a33fe7196d054378dde8fd2f27b85aa984b15 by Nate Graham, on behalf of Bohdan Onofriichuk.
Committed on 08/09/2024 at 11:06.
Pushed by ngraham into branch 'master'.

applets/devicenotifer: fix emblems not being updated

Emblems need to be updated when device status changes.

M  +1    -1    applets/devicenotifier/plugin/devicecontrol.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/c39a33fe7196d054378dde8fd2f27b85aa984b15
Comment 6 Patrick Silva 2024-11-09 10:43:53 UTC
Cannot reproduce with usb devices, but can with optical discs (CD/DVD/BD).

Operating System: Arch Linux 
KDE Plasma Version: 6.2.3
KDE Frameworks Version: 6.8.0
Qt Version: 6.8.0
Graphics Platform: Wayland
Comment 7 Patrick Silva 2024-11-27 11:37:54 UTC
Fixed with recent updates on neon unstable. :)

Operating System: KDE neon Unstable Edition
KDE Plasma Version: 6.2.80
KDE Frameworks Version: 6.9.0
Qt Version: 6.8.0
Graphics Platform: Wayland