applets/devicenotifer: fix emblems not being updated

Emblems need to be updated when device status changes.

BUG: 492588